--- a/FinalProject/Quick Music/style.css
+++ b/FinalProject/Quick Music/style.css
@@ -51,7 +51,7 @@ body{
     left: 0;
     right: 0;
     margin: auto;
-    //border: 5px solid white;
+    border: 5px solid white;
 }
 #controls{
 	position: absolute;
